make enhancement in resposetivity and add new screen size

--- a/src/Components/MovieDetails/MovieDetails.module.css
+++ b/src/Components/MovieDetails/MovieDetails.module.css
@@ -63,13 +63,24 @@ cursor: pointer;
     .images {
         display: none;
     }
-
+  
+    .details  {
+        width: 80%;
+        
+    }
+    .details h1 {
+        font-size: 30px;
+    }
 }
 
 
 @media (max-width: 1023px)  {
     .images {
         display: none;
+    }
+    .details  {
+        width: 80%;
+        
     }
 
 }
